# achoo

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yml
src/: cli.rs  main.rs  phrase.rs  search.rs  words.rs
