[package]
categories = ["command-line-utilities"]
description = "Acronym Chooser."
edition = "2021"
keywords = ["acronym"]
license-file = "LICENSE.md"
name = "achoo"
readme = "README.md"
repository = "https://github.com/tuydore/achoo"
version = "1.0.1"

[dependencies]
anyhow = "1.0.70"
clap = {version = "4.2.1", features = ["derive"]}
